vp lab8